# ddogctl

./: .gitignore  README.es.md  README.md  pyproject.toml
ddctl/: api.py  banner.txt  cli.py  config.py  i18n.py  options.py  ui.py  utils_time.py
ddctl/checks/: debug_help.py
ddctl/commands/: __init__.py  apm.py  auth.py  dashboards.py  incidents.py  logs.py  metrics.py  monitors.py  service.py  services.py  synthetics.py
scripts/: check_debug.py
tests/: test_debug_help.py
